[package]
name = "texel_types"
version = "2.0.0"
authors = ["Ales Katona <almindor@gmail.com>"]
edition = "2018"
description = "Types for Texel ASCII art text editor"
license = "Apache-2.0"
repository = "https://github.com/almindor/texel_types"
keywords = ["text", "ascii", "ascii-art", "format", "gamedev"]
readme = "README.md"
categories = ["rendering::data-formats", "multimedia::images"]


[dependencies]
big_enum_set = "0.2.0"
serde = { version = "1.0.116", optional = true }
serde_derive = { version = "1.0.116", optional = true }
specs = { version = "0.16.1", optional = true }

[features]
ecs_specs = ["specs"]
serde_support = ["serde/derive", "serde_derive", "big_enum_set/serde"]
