[package]
name = "texel_types"
version = "2.0.2"
authors = ["Ales Katona <almindor@gmail.com>"]
edition = "2018"
description = "Types for Texel ASCII art text editor"
license = "Apache-2.0"
repository = "https://github.com/almindor/texel_types"
keywords = ["text", "ascii", "ascii-art", "format", "gamedev"]
readme = "README.md"
categories = ["rendering::data-formats", "multimedia::images"]
rust-version = "1.59"

[dependencies]
big_enum_set = "0.3"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
specs = { version = "0.20", optional = true }

[features]
ecs_specs = ["specs"]
serde_support = ["serde/derive", "serde_derive", "big_enum_set/serde"]
